--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "demo",
-  "version": "0.0.1",
-  "main": "index.js",
+  "name": "algolia-react-starter",
+  "version": "0.1.0",
   "private": true,
   "repository": {},
   "scripts": {
@@ -12,16 +11,9 @@
     "lint:fix": "npm run lint -- --fix"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
-    "eslint": "^4.5.0",
-    "eslint-config-algolia": "^12.0.0",
-    "eslint-config-prettier": "^2.3.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-prettier": "^2.2.0",
-    "eslint-plugin-react": "^7.3.0",
-    "prettier": "^1.6.1",
     "algoliasearch": "^3.21.1",
     "babel-core": "^6.22.1",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^6.2.10",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
@@ -29,8 +21,15 @@
     "babel-preset-stage-0": "^6.22.0",
     "classnames": "^2.2.5",
     "css-loader": "^0.26.1",
+    "eslint": "^4.5.0",
+    "eslint-config-algolia": "^12.0.0",
+    "eslint-config-prettier": "^2.3.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-prettier": "^2.2.0",
+    "eslint-plugin-react": "^7.3.0",
     "file-loader": "^0.10.0",
     "node-sass": "^4.5.0",
+    "prettier": "^1.6.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-instantsearch": "^3.0.0",
@@ -41,5 +40,8 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1"
+  },
+  "dependencies": {
+    "prop-types": "^15.6.0"
   }
 }
