--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "prettier": "^1.6.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-instantsearch": "^3.0.0",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
@@ -42,6 +41,7 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
-    "prop-types": "^15.6.0"
+    "prop-types": "^15.6.0",
+    "react-instantsearch": "^5.1.0"
   }
 }
